# Tracker

./: README.md
installer/macos/: icon.icns
src/: index.html  main.js  onclick.js  styles.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
