[package]
name = "tracker"
version = "0.1.0"
description = "A Tracker App"
authors = ["you"]
edition = "2021"

[lib]
name = "tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.8"
scraper = "0.20.0"
dirs-2 = "3.0.1"
once_cell = "1.20.2"

